--- a/data/com.github.eugeneia.recall.desktop.in
+++ b/data/com.github.eugeneia.recall.desktop.in
@@ -4,7 +4,7 @@ GenericName=Document Search
 Comment=Find documents
 Categories=Utility;FileTools;
 Exec=com.github.eugeneia.recall
-Icon=application-default-icon
+Icon=com.github.eugeneia.recall
 Terminal=false
 Type=Application
 Keywords=Search;Document;Full;Text;Index;Lookup:Query;Recoll;Xapian;Files;Find;
