--- a/data/com.github.eugeneia.recall.appdata.xml.in
+++ b/data/com.github.eugeneia.recall.appdata.xml.in
@@ -7,5 +7,9 @@
   <summary>Search and find documents using full-text search</summary>
   <description>
     <p>Recall is a frontend to the Recoll full-text desktop search engine.</p>
+    <p>An read-time indexing process is started automatically in the background
+      and keeps running even when Recall is closed. It may take a while for the
+      initial index to be built. Expect a delay before search results become
+      comprehensive.</p>
   </description>
 </component>
