--- a/data/com.github.eugeneia.recall.appdata.xml.in
+++ b/data/com.github.eugeneia.recall.appdata.xml.in
@@ -2,7 +2,7 @@
 <!-- Copyright 2019 Max Rottenkolber <max@mr.gy> -->
 <component type="desktop">
   <id>com.github.eugeneia.recall</id>
-  <metadata_license>CC-0-1.0</metadata_license>
+  <metadata_license>CC-BY-3.0</metadata_license>
   <project_license>GPL-3.0+</project_license>
   <name>Recall</name>
   <summary>Search for documents using full-text search</summary>
