--- a/meson.build
+++ b/meson.build
@@ -27,7 +27,7 @@ install_data(
 )
 
 # Install icons
-icon_sizes = ['48', '64', '128']
+icon_sizes = ['32', '48', '64', '128']
 foreach i : icon_sizes
     install_data(
         join_paths('data/icons', i + '.svg'),
